--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,29 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<header>
+		<nav class="menu-section">
+			<h1 class="nav-logo">Love &#9825 Cookies.</h1>
+			<ul>
+				<li><a href="#">Strona główna</a></li>
+				<li><a href="#">Ciastka</a>
+					<ul>
+						<li><a href="#">Torty</a></li>
+						<li><a href="#">Babeczki</a></li>
+						<li><a href="#">Bezy</a></li>
+						<li><a href="#">Ciasta</a></li>
+					</ul>
+				</li>
+				<li><a href="#">Kontakt</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
+	<section></section>
+
 
 </body>
 </html>
