Add hero section

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,11 @@
 			</ul>
 		</nav>
 	</header>
-	<section></section>
+	<section class="her-section">
+		<div class="slogan">
+			<h2>First, <span>think</span>. Second, <span>believe</span>. Third, <span>dream</span>.</h2> <h2>And finally, <span class="yellow-text">dare!</span></h2>
+		</div>
+	</section>
 	<section></section>
 	<section></section>
 	<section></section>
