--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,17 @@
 			<h2>First, <span>think</span>. Second, <span>believe</span>. Third, <span>dream</span>.</h2> <h2>And finally, <span class="yellow-text">dare!</span></h2>
 		</div>
 	</section>
-	<section></section>
+	<section>
+		<article class="about-section">
+			<div class="container">
+				<h2>Chujowe babebczki</h2>
+				<p>Lorem ipsum</p>
+				<p>Chujum tripsum</p>
+				<p>Pindol fiksum</p>
+			
+			</div>
+		</article>
+	</section>
 	<section></section>
 	<section></section>
 	<section></section>
