--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,21 @@
 				<p>Lorem ipsum</p>
 				<p>Chujum tripsum</p>
 				<p>Pindol fiksum</p>
-			
+
 			</div>
 		</article>
 	</section>
-	<section></section>
+	<section class="gallery-section">
+		<div class="container">
+			<h2 class="gallery-text">Galeria naszych penisów</h2>
+			<figure class="gallery-image">
+				<img src="https://images.unsplash.com/photo-1521886655570-97530ff9454b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d0a49d902098d520d73d1bea27857329&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 1"> 
+				<img src="https://images.unsplash.com/photo-1519869491916-8ca6f615d6bd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=750783e2b6b6102a8248e3498a9d227f&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 2"> 
+				<img src="https://images.unsplash.com/photo-1477040648049-a289a91626c1?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=0995f0eee87e22a4c1e8ecc036447cb0&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 3"> 
+				<img src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=30aa07431100c6ce47826b9ea58d5b16&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 4">
+			</figure>
+		</div>
+	</section>
 	<section></section>
 	<section></section>
 
