--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,22 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/jhmYWNEW-Y8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</section>
-	<section></section>
+	<section class="icon-section container">
+		<div class="icon fb-fans">
+			<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a> 
+			<p>2500</p> 
+			<p><span>fanów</span></p>
+		</div>
+		<div class="icon insta-fans">
+			<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a> 
+			<p>1500</p> 
+			<p><span>obserwujących</span></p></div>
+		<div class="icon cake">
+			<a href="#" target="_blank"><i class="fas fa-birthday-cake"></i></a> 
+			<p>300</p> 
+			<p><span>upieczonych</span></p>
+		</div>
+	</section>
 
 
 </body>
