--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,10 @@
 		</div>
 	</section>
 
+	<footer>
+		<p>&#169; Strona stworzona przez <a href="http://bedeprogramistka.pl" target="_blank">RuchamTwojaMatke.pl</a></p>
+	</footer>
+
 
 </body>
 </html>
