Add logo&header style

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 				<li><a href="#">Kontakt</a></li>
 			</ul>
 		</nav>
+		<div class="clear"></div>
 	</header>
 	<section class="her-section">
 		<div class="slogan">
