--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
 		</nav>
 		<div class="clear"></div>
 	</header>
-	<section class="her-section">
+	<section class="hero-section">
 		<div class="slogan">
 			<h2>First, <span>think</span>. Second, <span>believe</span>. Third, <span>dream</span>.</h2> <h2>And finally, <span class="yellow-text">dare!</span></h2>
 		</div>
