--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
 	</section>
 	<section class="gallery-section">
 		<div class="container">
-			<h2 class="gallery-text">Galeria naszych penisów</h2>
+			<h2 class="gallery-text">Galeria naszych ciastek</h2>
 			<figure class="gallery-image">
 				<img src="https://images.unsplash.com/photo-1521886655570-97530ff9454b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=d0a49d902098d520d73d1bea27857329&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 1"> 
 				<img src="https://images.unsplash.com/photo-1519869491916-8ca6f615d6bd?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=750783e2b6b6102a8248e3498a9d227f&auto=format&fit=crop&w=750&q=80" alt="Zdjęcie 2"> 
