Add footer style

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
 	</section>
 
 	<footer>
-		<p>&#169; Strona stworzona przez <a href="http://bedeprogramistka.pl" target="_blank">RuchamTwojaMatke.pl</a></p>
+		<p>&#169; Strona stworzona przez <a href="http://bedeprogramistka.pl" target="_blank">STACHI.pl</a></p>
 	</footer>
 
 
