--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,15 @@
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/jhmYWNEW-Y8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 		</div>
 	</section>
+	<section class="slider-section"> 
+		<div class="slick-slider"> <!-- http://kenwheeler.github.io/slick/ --> 
+			<img src="https://images.unsplash.com/photo-1525251172010-e7472985a6ca?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=874212cd1f90d309f561c4869a60a4f0&auto=format&fit=crop&w=889&q=80" alt="muffins" title="ciasteczka"> 
+			<img src="https://images.unsplash.com/photo-1524955638205-d0194538389d?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=aa76e8abd245d18af48f93688ef8bfb9&auto=format&fit=crop&w=667&q=80" alt="muffins" title="ciasteczka"> 
+			<img src="https://images.unsplash.com/photo-1474625342403-1b8a2c0f7215?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=11d5188f229575b2df362585ec764663&auto=format&fit=crop&w=751&q=80" alt="muffins" title="ciasteczka"> 
+			<img src="https://images.unsplash.com/photo-1515194674751-901bf97f123b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c43d0faf77c8b673025f8ac6ac6a95a4&auto=format&fit=crop&w=750&q=80" alt="candy" title="makarony"> 
+			<img src="https://images.unsplash.com/photo-1464349095431-e9a21285b5f3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=9129298844672a69164d36cc39f95e55&auto=format&fit=crop&w=500&q=60" alt="muffins" title="ciasteczka"> 
+		</div> 
+	</section>
 	<form action="form.php" method="POST">
 		<label for="name">Imię</label> 
 		<input type="text" name="name" id="name"> 
